kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service-app
  labels:
    app: book-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-service-app
  template:
    metadata:
      labels:
        app: book-service-app
    spec:
      containers:
        - name: book-service-app
          image: ecco18/book-service:v7
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  labels:
    monitor: book-service
  name: book-app-service
spec:
  selector:
    app: book-service-app
  ports:
    - name: api
      protocol: TCP
      port: 80
      targetPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: book-nodeport-service
spec:
  type: NodePort
  selector:
    app: book-service-app
  ports:
    - protocol: TCP
      nodePort: 30083
      port: 8082
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-book-service
spec:
  rules:
    - host: demo.localdev.me
      http:
        paths:
          - path: /api/v1/rentals
            backend:
              service:
                name: book-app-service
                port:
                  number: 80
            pathType: Prefix
          - path: /api/v1/books
            backend:
              service:
                name: book-app-service
                port:
                  number: 80
            pathType: Prefix
  ingressClassName: nginx
